tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_60.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (- (- 0));
               q := ((+ 2) = z);
               r := (1 # (1223 + 2));
               z := 1;
               r := p;
  (* error *)  y := z;
               z := 1223;
               q := (2 = (y * 0));
               x := y;
               z := (1 DIV 200)
END Test16.